# promptctl

./: .gitignore  LICENSE  README.md  pyproject.toml
promptctl/: __init__.py  cli.py  client.py
tests/: test_client.py
