[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptctl"
dynamic = ["version"]
description = "CLI + SDK for the DevOps AI ToolKit prompt API — search and use DevOps AI prompts from your terminal."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "DevOps AI ToolKit", email = "consulting@devopsaitoolkit.com" }]
keywords = ["devops", "ai", "prompts", "cli", "sre", "kubernetes", "terraform", "openstack", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://devopsaitoolkit.com"
Repository = "https://github.com/devopsaitoolkit/promptctl"
"Prompt library" = "https://devopsaitoolkit.com/prompts/"
API = "https://devopsaitoolkit.com/api/v1/meta.json"

[project.scripts]
promptctl = "promptctl.cli:main"

[tool.hatch.version]
path = "promptctl/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["promptctl"]

[tool.hatch.build.targets.sdist]
include = ["promptctl", "README.md", "LICENSE", "tests"]
